# nistreamer

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
backend/src/: channel.rs  device.rs  drop_alarm.rs  flat_wrap.rs  lib.rs  main.rs  manager_thread.rs  nidaqmx.rs  nidaqmx_dummy.rs  streamer.rs  utils.rs  worker_cmd_chan.rs
docs/: building_docs_locally.md  conf.py  index.rst  limitations.md  requirements.txt
docs/api/: card.rst  channel.rst  index.rst  stream_handle.rst  streamer.rst  utils.rst
docs/getting_started/: index.rst  installation.md  limitations.md
docs/internals/: fn_lib.md  index.rst  project_structure.md
docs/usage/: context_manager.ipynb  first_time_use.ipynb  hardware_sync.ipynb  index.rst  instructions.ipynb  sequence_scripting.ipynb  streamer_setup.py  usrlib.ipynb
ni-streamer/: Cargo.toml
ni-streamer/src/: channel.rs  device.rs  flat_wrap.rs  lib.rs  main.rs  nidaqmx.rs  nidaqmx_dummy.rs  py_wrap.rs  streamer.rs
ni_streamer/: Cargo.toml
ni_streamer/src/: lib.rs
nistreamer-base/: Cargo.toml
nistreamer-base/src/: channel.rs  fn_lib_base.rs  instruction.rs  lib.rs  std_fn_lib.rs  usrlib_prelude.rs
nistreamer-base/src/fn_lib_tools/: std_fn_lib.rs  usr_lib_prelude.rs
nistreamer-fn-lib-macros/: Cargo.toml
nistreamer-macros/: Cargo.toml
py_api/demo/: Advanced stream control tutorial.ipynb  Demo 1 - minimal example.ipynb  Demo 2 - 2D parameter sweep.ipynb  Demo 3 - context manager tutorial.ipynb
py_api/nistreamer/: __init__.py  card.py  channel.py  streamer.py  utils.py
py_api/nistreamer/proxy/card/: ni6535.py
py_api/nistreamer/proxy/chan/: inverted_do.py
src/: channel.rs  device.rs  flat_wrap.rs  lib.rs  main.rs  nidaqmx.rs  streamer.rs  worker_cmd_chan.rs
