[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "nistreamer"
version = "0.1.0"
description = "An abstraction layer providing a Python API for scripted pulse sequence generation with National Instruments hardware."
authors = [{ name = "NIStreamer project contributors" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy", "plotly"]

[tool.maturin]
python-source = "py_api"  # Location of `nistreamer` Python front-end
module-name = "nistreamer._nistreamer"  # the compiled extension module name
features = ["pyo3/extension-module"]
profile = "release"
