[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "nistreamer"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = ["numpy", "plotly"]
description = "An abstraction layer providing a Python API for scripted pulse sequence generation with National Instruments hardware."
authors = [{ name = "NI Pulse Streamer Project and Contributors <https://github.com/NIStreamer>" }]
license = "MIT"
readme = "README.md"
keywords = ["pulse sequence", "experiment control", "experiment automation", "National Instruments", "NI DAQ"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers"
]

[project.urls]
Documentation = "https://nistreamer.readthedocs.io"
GitHub = "https://github.com/NIStreamer/nistreamer"
Issues = "https://github.com/NIStreamer/nistreamer/issues"

[tool.maturin]
python-source = "py_api"  # Location of `nistreamer` Python front-end
module-name = "nistreamer._nistreamer"  # the compiled extension module name
features = ["pyo3/extension-module"]
profile = "release"
