[package]
name = "nistreamer_backend"
version = "0.1.0"
edition = "2021"
description = "An extension of base_streamer defining streaming behavior on National Instrument (NI) devices."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nistreamer_backend"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
base_streamer = { path = "../../base-streamer" }
usr_fn_lib = { path = "../../usr-fn-lib", optional = true }
indexmap = "2.3.0"
pyo3 = { version = "0.22.1", features = ["multiple-pymethods"] }  # "extension-module"
libc = "0.2.147"
parking_lot = "0.12.2"
itertools = "0.14.0"
serde = { version = "1.0.217", optional = true, features = ["derive"]}
serde_json = { version = "1.0.135", optional = true}

# To enable features, build with `--features` flag.
#   single feature example: --features usr_fn_lib
#        multiple features: --features "usr_fn_lib, nidaqmx_dummy"
[features]
usr_fn_lib = ["dep:usr_fn_lib"]
nidaqmx_dummy = ["dep:serde", "dep:serde_json", "indexmap/serde"]
