[package]
name = "nistreamer-macros"
edition = "2021"
description = "Helper procedural macros for waveform function libraries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = {version = "2.0.70", features = ["full", "extra-traits"] }
quote = "1.0.36"

[features]
debug_token_print = []